<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="music_count_unit">Musics</string>
    <string name="app_name">Ease Music Player</string>
    <string name="dashboard_sleep_mode">SLEEP MODE</string>
    <string name="dashboard_devices">DEVICES</string>
    <string name="dashboard_devices_add">Add Devices</string>
    <string name="setting_about">ABOUT</string>
    <string name="setting_git_repo">Git Repository</string>
    <string name="setting_version">Version</string>
    <string name="storage_edit_username">USERNAME</string>
    <string name="storage_edit_password">PASSWORD</string>
    <string name="storage_edit_addr">ADDRESS</string>
    <string name="storage_edit_alias">NAME (ALIAS)</string>
    <string name="storage_edit_anonymous">ANONYMOUS</string>
    <string name="playlist_empty">Empty Playlists. Tap to add one.</string>
    <string name="storage_edit_form_address">Address cannot be empty</string>
    <string name="storage_edit_form_username">Username cannot be empty</string>
    <string name="storage_edit_form_password">Password cannot be empty</string>
    <string name="storage_edit_testing_toast_testing">Testing...</string>
    <string name="storage_edit_testing_toast_timeout">Error: Timeout</string>
    <string name="storage_edit_testing_toast_unauth">Error: Unauthorized</string>
    <string name="storage_edit_testing_toast_other_error">Error: Other error</string>
    <string name="storage_edit_testing_toast_success">Success</string>
    <string name="playlists_dialog_tab_full">FULL</string>
    <string name="playlists_dialog_tab_empty">EMPTY</string>
    <string name="playlists_dialog_playlist_name">PLAYLIST NAME</string>
    <string name="playlists_dialog_playlist_full_import_desc">Import musics and cover from storage</string>
    <string name="playlists_dialog_import_info">IMPORT INFO</string>
    <string name="playlists_dialog_cover">COVER (OPTIONAL)</string>
    <string name="playlists_dialog_button_reset">RESET</string>
    <string name="playlists_dialog_button_cancel">CANCEL</string>
    <string name="playlists_dialog_button_ok">OK</string>
    <string name="playlist_empty_list">Empty Musics in playlist</string>
    <string name="playlist_list_count_suffixes">Musics</string>
    <string name="playlist_list_count_suffix">Music</string>
    <string name="playlist_context_menu_import">Import Musics</string>
    <string name="playlist_context_menu_edit">Edit</string>
    <string name="playlist_context_menu_remove">Remove</string>
    <string name="confirm_dialog_title">CONFIRM</string>
    <string name="confirm_dialog_btn_ok">OK</string>
    <string name="confirm_dialog_btn_cancel">CANCEL</string>
    <string name="playlist_remove_dialog_text">Are you sure to remove playlist</string>
    <string name="import_musics_title_default">Import Musics</string>
    <string name="import_musics_title_single_suffix">Music Selected</string>
    <string name="import_musics_title_multi_suffix">Musics Selected</string>
    <string name="import_musics_paths_root">Root</string>
    <string name="import_musics_error_authentication_desc">The username or password is wrong. Please check the username and password in the configuration.</string>
    <string name="import_musics_error_timeout_desc">Connect timeout. Please try again.</string>
    <string name="import_musics_error_unknown_desc">Unknown error. Please try again.</string>
    <string name="import_musics_error_permission_desc">Need permission. Tap to request permission.</string>
    <string name="import_musics_error_authentication_title">AUTHENTICATION FAIL</string>
    <string name="import_musics_error_timeout_title">CONNECTION TIMEOUT</string>
    <string name="import_musics_error_unknown_title">UNKNOWN ERROR</string>
    <string name="import_musics_error_permission_title">PERMISSION ERROR</string>
    <string name="music_player_context_menu_remove">Remove</string>
    <string name="time_to_pause_delete">DELETE</string>
    <string name="time_to_pause_cancel">CANCEL</string>
    <string name="time_to_pause_ok">OK</string>
    <string name="time_to_pause_hour">HOUR</string>
    <string name="time_to_pause_minute">MINUTE</string>
    <string name="storage_remove_desc_main">Are you sure to remove storage “$$B__E_TITLE$$”?</string>
    <string name="storage_remove_desc_count">$$B__E_MCNT$$ musics will be removed.</string>
    <string name="music_lyric_add">Add Lyric</string>
    <string name="music_lyric_remove">Remove Lyric</string>
    <string name="music_lyric_no_desc">No Lyric.</string>
    <string name="music_lyric_try_add_desc">Try add one.</string>
    <string name="music_lyric_fail">Failed to load lyric.</string>
    <string name="storage_edit_oauth">OAuth</string>
    <string name="storage_edit_onedrive_connect">Connect your account</string>
    <string name="storage_edit_onedrive_disconnect">Disconnect</string>
    <string name="storage_edit_onedrive_should_auth">Should connect your account</string>
    <string name="storage_edit_onedrive_alias_not_empty">Alias should not be empty</string>
    <string name="setting_debug">DEBUG</string>
    <string name="setting_log">Logs</string>
    <string name="setting_more">More...</string>
    <string name="debug_trigger_rs_err">Trigger Rust Error</string>
    <string name="debug_trigger_rs_async_err">Trigger Rust Async Error</string>
    <string name="debug_trigger_kt_exception">Trigger Kotlin Exception</string>
    <string name="debug_trigger_kt_async_exception">Trigger Kotlin Async Exception</string>
    <string name="log_title">Log</string>
    <string name="debug_trigger_rs_panic">Trigger Rust panic!</string>
</resources>